--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,28 +1,37 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
+name: Build, Push and Deploy a Docker Image
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+ push:
+   branches: [main]
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
-
-  build:
-    runs-on: ubuntu-24.04-arm
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
+ build-push-deploy-image:
+   runs-on: ubuntu-latest
+   steps:
+     - name: Checkout repository
+       uses: actions/checkout@v4
+     - name: Log in to the Container registry
+       uses: docker/login-action@v3.3.0
+       with:
+         registry: ghcr.io
+         username: ${{ github.actor }}
+         password: ${{ secrets.GITHUB_TOKEN }}
+     - name: Build and push Docker image
+       id: push
+       uses: docker/build-push-action@v6.5.0
+       with:
+         context: .
+         push: true
+         tags: ghcr.io/${{ github.repository }}:latest
+     - name: Deploy the app
+       uses: digitalocean/app_action/deploy@v2
+       env:
+         SAMPLE_DIGEST: ${{ steps.push.outputs.digest }}
+       with:
+         token: ${{ secrets.DO_DEPLOY_TOKEN }} 
