--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -38,7 +38,7 @@ jobs:
       # only required for workflows in private repositories
       actions: read
       contents: read
-
+      pull-requests: write
     strategy:
       fail-fast: false
       matrix:
